# TOWER

./: App.tsx  PACKAGES.md  README.md  SECRETS.md  dev-start.sh  docker-compose.yml  index.html
backend/: .env  Dockerfile  README.md  TECHNICAL.md  example_test.yaml  llm-config.example.yaml  llm-config.yaml  pyproject.toml
backend/.web2api/: llm.yaml
backend/src/: __init__.py  cli.py
backend/src/api/: __init__.py  main.py  main_new.py  openai_compat.py  service_manager.py  websocket_handler.py
backend/src/assertions/: __init__.py  engine.py  ml_engine.py
backend/src/auth/: __init__.py  credential_store.py  form_filler.py  session_manager.py
backend/src/builder/: __init__.py  llm_enhanced.py  orchestrator.py  test_builder.py
backend/src/builder/analyzer/: __init__.py  element_classifier.py
backend/src/builder/crawler/: __init__.py  intelligent_crawler.py
backend/src/builder/discovery/: __init__.py  api_detector.py  flow_detector.py  form_analyzer.py
backend/src/builder/generator/: __init__.py  assertion_generator.py  test_strategy.py  yaml_builder.py
backend/src/ci/: __init__.py  generator.py
backend/src/concurrency/: __init__.py  browser_pool.py  resource_monitor.py  runner.py
backend/src/discovery/: __init__.py  config_generator.py  feature_mapper.py  operation_builder.py  orchestrator.py
backend/src/dsl/: __init__.py  models.py  parser.py  transformer.py  validator.py
backend/src/execution/: live_viewport.py  operation_runner.py  queue_manager.py  stealth_config.py  video_recorder.py
backend/src/generative/: __init__.py
backend/src/llm/: __init__.py  assertions.py  client.py  config.py  service.py
backend/src/orchestrator/: __init__.py  scheduler.py
backend/src/runner/: __init__.py  self_healing.py  test_runner.py
backend/src/storage/: __init__.py  artifact_manager.py  database.py  service_models.py
backend/src/versioning/: __init__.py  diff_analyzer.py  history_tracker.py  models.py
backend/src/visual/: __init__.py  regression_engine.py
backend/src/web2api/: __init__.py  cli.py
backend/src/web2api/api/: __init__.py  main.py  openai_compat.py  service_manager.py
backend/src/web2api/assertions/: __init__.py  engine.py
backend/src/web2api/auth/: __init__.py  form_filler.py  session_manager.py
backend/src/web2api/builder/: __init__.py  llm_enhanced.py  orchestrator.py
backend/src/web2api/builder/analyzer/: __init__.py  element_classifier.py  page_analyzer.py  visual_analyzer.py
backend/src/web2api/builder/crawler/: __init__.py  intelligent_crawler.py  state_manager.py
backend/src/web2api/builder/discovery/: __init__.py  flow_detector.py  form_analyzer.py
backend/src/web2api/builder/generator/: __init__.py  assertion_generator.py  test_strategy.py  yaml_builder.py
backend/src/web2api/ci/: __init__.py  generator.py
backend/src/web2api/concurrency/: __init__.py  browser_pool.py  config.py  resource_monitor.py  runner.py
backend/src/web2api/discovery/: __init__.py  auth_detector.py  config_generator.py  feature_mapper.py  operation_builder.py  orchestrator.py
backend/src/web2api/dsl/: __init__.py  models.py  parser.py  transformer.py  validator.py
backend/src/web2api/execution/: __init__.py  chat_executor.py  live_viewport.py  operation_runner.py  queue_manager.py  stealth_config.py
backend/src/web2api/generative/: __init__.py  chaos_agents.py
backend/src/web2api/llm/: __init__.py  assertions.py  client.py  config.py  prompts.py  service.py
backend/src/web2api/orchestrator/: __init__.py  scheduler.py
backend/src/web2api/runner/: __init__.py  test_runner.py
backend/src/web2api/storage/: __init__.py  artifact_manager.py  base.py  database.py  service_models.py
backend/src/web2api/versioning/: __init__.py  diff_analyzer.py  history_tracker.py  models.py
backend/src/web2api/visual/: __init__.py  regression_engine.py
backend/tests/: README.md  __init__.py  conftest.py  test_builder.py  test_concurrency.py  test_dsl.py  test_example_forms.yaml  test_github_navigation.yaml  test_google_search.yaml  test_k2think_integration.py  test_login.yaml  test_network_validation.yaml  test_owl_browser_integration.py  test_setup.sh  test_versioning.yaml  test_visual_color.yaml  test_visual_regression.yaml  test_wikipedia_content.yaml
backend/tests/integration/: test_builder_real_sites.py
backend/tests/llm/: test_config.py  test_service.py
components/: Dashboard.tsx  FlowConfig.tsx  ServiceManager.tsx
frontend/: .env.example  App.tsx  metadata.json  package-lock.json  package.json  types.ts
services/: geminiService.ts
(+2 files in other folders)
